Issue fixed: logos were overlapping on mobile site

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ h1 {
     text-align: center;
 }
 
-.pure-u-2-24 {
+.pure-u-4-24 {
     text-align: center;
    
 }
